fix btn css overlap

--- a/reactapp/src/components/Games/Checkers/checkersLobby.css
+++ b/reactapp/src/components/Games/Checkers/checkersLobby.css
@@ -18,7 +18,7 @@
     background-size: cover;
 }
 
-button {
+#lobbyWrapper button {
     cursor: pointer;
     border: none;
     font-size: 1.3em;
@@ -31,10 +31,10 @@ button {
     color: whitesmoke;
 }
 
-button:hover {
+#lobbyWrapper button:hover {
     background-color: #171717;
 }
 
-button:active {
+#lobbyWrapper button:active {
     background-color: #0a0a0a;
 }
